# PubSec-Agentic-InfoAsst

./: .gitignore  .gitleaks.toml  AIA-Design-Principles-Beyond-Agentic-State.md  AUTOMATION-PHASE-3-IMPLEMENTATION.md  Agentic-State-Vision.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EVA-Design-Principles-Beyond-Agentic-State.md  LICENSE  Makefile  NOTICE.md  PHASE-3-4-IMPLEMENTATION-SUMMARY.md  PHASE-3-QUICK-START.md  PLAN.md  README.md  Road-to-ATO-n-Continuous-Authorization.md  SECURITY.md  SUPPORT.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  ruff.toml
services/api-gateway/: .env.example  pyproject.toml  requirements.txt
services/api-gateway/app/: config.py  dependencies.py  main.py
services/api-gateway/app/agents/: azure_client.py  embedding_client.py  identity.py  memory.py  orchestrator.py
services/api-gateway/app/auth/: __init__.py  demo_provider.py  entra_provider.py  middleware.py  (+2 more)
services/api-gateway/tests/: conftest.py  test_admin.py  test_apim_attribution.py  test_archetypes.py  test_audit_log.py  test_auth.py  test_chat_real_tokens.py  test_conflict_resolution.py  test_content_safety.py  test_deployments.py  test_documents_list.py  test_drift_metrics.py  test_entra_auth.py  test_eval_runner.py  test_explainability.py  test_feedback.py  test_finops_summary.py  test_guardrails.py  test_health.py  test_ops_timeseries.py  test_orchestrator.py  test_policy_engine.py  test_sanitizer.py  test_telemetry_historical.py  test_tenant_init.py  test_workspace_create.py  test_workspaces_bookings.py
(+335 files in other folders)
