[project]
name = "eva-agentic-api-gateway"
version = "0.1.0"
description = "EVA Agentic API Gateway"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
  "E501",  # line-too-long — not worth gating on for a transit repo
  "E402",  # module-import-not-at-top-of-file — some modules import after sys.path setup
]

[tool.pyright]
pythonVersion = "3.12"
# `basic` for the transit window — catches obvious type bugs without gating CI
# on the full `standard` sweep. Upstream review will re-enable stricter modes.
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
